--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "cross-env rimraf ./dist/* && webpack --mode=production",
+    "dev": "cross-env rimraf ./dist/* && webpack --mode=development --progress",
+    "build": "cross-env rimraf ./dist/* && webpack --mode=production --progress",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "cross-env": "^6.0.0",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
@@ -23,15 +29,27 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
+    "webpack-assets-manifest": "^3.1.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
     "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
+    ]
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "ie >= 9",
+    "opera 12",
+    "firefox esr",
+    "last 2 major versions"
   ]
 }
