--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "dev": "cross-env rimraf ./dist/* && webpack --mode=development --progress",
-    "build": "cross-env rimraf ./dist/* && webpack --mode=production --progress",
+    "dev": "webpack --progress --mode=development",
+    "build": "webpack --progress --mode=production",
+    "watch": "webpack --progress --watch",
+    "start": "cross-env rimraf ./dist/* && webpack-dev-server --inline --watch --hot",
     "test": "jest"
   },
   "keywords": [],
@@ -17,9 +18,13 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.0",
     "css-loader": "^3.2.0",
+    "extract-loader": "^3.1.0",
     "file-loader": "^4.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
@@ -30,18 +35,28 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
     "webpack-assets-manifest": "^3.1.1",
+    "webpack-bundle-analyzer": "^3.5.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
-    "webpack-manifest-plugin": "^2.0.4"
+    "webpack-manifest-plugin": "^2.0.4",
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
+    "core-js": "^3.2.1",
     "jquery": "^3.4.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "babel": {
     "presets": [
-      "@babel/env",
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": 3
+        }
+      ],
       "@babel/react"
     ]
   },
