--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "build": "webpack --progress --mode=production",
     "watch": "webpack --progress --watch",
     "start": "cross-env rimraf ./dist/* && webpack-dev-server --inline --watch --hot",
+    "prettier": "prettier --write src/**/*.{scss,js,jsx,vue,json}",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "core-js": "^3.2.1",
+    "jquery": "^3.4.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "regenerator-runtime": "^0.13.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
@@ -29,10 +37,14 @@
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^8.0.0",
+    "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.40.2",
     "webpack-assets-manifest": "^3.1.1",
     "webpack-bundle-analyzer": "^3.5.1",
@@ -40,13 +52,6 @@
     "webpack-dev-server": "^3.8.1",
     "webpack-manifest-plugin": "^2.0.4",
     "write-file-webpack-plugin": "^4.5.1"
-  },
-  "dependencies": {
-    "core-js": "^3.2.1",
-    "jquery": "^3.4.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "regenerator-runtime": "^0.13.3"
   },
   "babel": {
     "presets": [
