--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "hello-webpack",
+  "name": "webpack4-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "start": "npm run hot",
+    "build": "npm run prod",
     "dev": "webpack --progress --mode=development",
-    "build": "webpack --progress --mode=production",
+    "prod": "webpack --progress --mode=production",
     "watch": "webpack --progress --watch",
-    "start": "cross-env rimraf ./dist/* && webpack-dev-server --inline --watch --hot",
+    "hot": "cross-env rimraf ./dist/* && webpack-dev-server --inline --watch --hot",
     "prettier": "prettier --write src/**/*.{scss,js,jsx,vue,json}",
     "test": "jest"
   },
@@ -15,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.1",
     "core-js": "^3.2.1",
     "jquery": "^3.4.1",
     "react": "^16.9.0",
@@ -27,6 +29,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^6.0.0",
     "css-loader": "^3.2.0",
     "extract-loader": "^3.1.0",
@@ -39,6 +42,7 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^8.0.0",
     "prettier": "^1.18.2",
+    "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.0",
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
